form, validate angular

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -78,6 +78,11 @@
     </div>
 
     <div>
+        <app-form></app-form>
+    </div>
+    
+
+    <div>
         Ten : <app-name [name]="StudentName"></app-name>
         MaSV : <app-identity [id]="StudentId"></app-identity>
     </div>
