--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,11 +1,12 @@
-<p>{{userForm.valid | json}}</p>
-<form action="" #userForm="ngForm" (ngSubmit)="onSubmit(userForm.value)">
+<!-- <p>{{userForm.valid | json}}</p> -->
+<p>{{inputValues | json}}</p>
+<form action="" #userForm="ngForm" (ngSubmit)="onSubmit(userForm)">
     <div class="form-group">
         <label for="">Tên SV</label>
         <input 
         type="text" 
         class="form control" 
-        name="name" ngModel
+        name="name" [(ngModel)]="inputValues.name"
         required minlength="6"
         #name="ngModel">
         <!-- <span>{{name.dirty | json}}</span>
@@ -23,7 +24,7 @@
         <label for="">Tuổi SV</label>
         <input type="number" 
         class="form-control" 
-        name="age" ngModel
+        name="age" [(ngModel)]="inputValues.age"
         required min="1" max="60"
         #age="ngModel">
         <app-show-validate [field]="age" key="Tuổi"></app-show-validate>
@@ -47,3 +48,27 @@
         >Submit</button>
     </div>
 </form>
+
+<div>
+    <table class="table table-hover">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>NAME</th>
+                <th>AGE</th>
+                <th>ACTION</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let user of users">
+                <td>{{user.id}}</td>
+                <td>{{user.name}}</td>
+                <td>{{user.age}}</td>
+                <td>
+                    <button  (click)="onEdit(user.id)" class="btn btn-info">Sửa</button>
+                    <button (click)="onDelete(user.id)" class="btn btn-danger">Xóa</button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
